BG bleedthrough fix for 1px at xx5 pixel sizes

--- a/aemedge/blocks/modal/modal.css
+++ b/aemedge/blocks/modal/modal.css
@@ -93,4 +93,5 @@ body.modal-open {
 
   .modal dialog .section {
     padding: 0;
+    margin-right: -1px;
   }
